main.scss and html

--- a/scss/main.css
+++ b/scss/main.css
@@ -1,1 +1,7 @@
-/*# sourceMappingURL=main.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
+  box-sizing: border-box;
+}/*# sourceMappingURL=main.css.map */
