--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-decoration: none;
+    box-sizing: border-box;
+}
+
+.container {}
+
 @import './mixin';
 @import './veraybels';
 @import './allblock-file/alblock';
