--- a/scss/main.css
+++ b/scss/main.css
@@ -4,4 +4,35 @@
   list-style: none;
   text-decoration: none;
   box-sizing: border-box;
+}
+
+.container {
+  max-width: 1252px;
+  margin: 0 auto;
+  padding: 0 10px;
+  width: 100%;
+}
+
+header {
+  background-image: url(../../imges/header.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center;
+}
+
+.nav {
+  padding: 44px 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.nav__list {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 36px;
 }/*# sourceMappingURL=main.css.map */
