--- a/scss/main.css
+++ b/scss/main.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: "IBM Plex Sans";
+  src: url(../../fonts/IBMPlexSans-Regular.ttf);
+}
 * {
   margin: 0;
   padding: 0;
@@ -13,8 +17,20 @@
   width: 100%;
 }
 
+body {
+  font-family: "IBM Plex Sans";
+}
+
+@font-face {
+  font-family: "IBM Plex Sans";
+  src: url(../../fonts/IBMPlexSans-Regular.ttf);
+}
+@font-face {
+  font-family: "IBM Plex Sans";
+  src: url(../../fonts/IBMPlexSans-Regular.ttf);
+}
 header {
-  background-image: url(../../imges/header.png);
+  background-image: url(../../imges/box.png);
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
@@ -65,6 +81,13 @@ header {
   padding: 8px 32px;
   color: rgba(6, 18, 36, 0.9);
 }
+.nav__list .btn:hover {
+  background: #1064E5;
+  border-radius: 45px;
+  color: #FFFFFF;
+  transition: all 2s ease;
+  transform: rotate(360deg);
+}
 .nav__list .btn1 {
   font-family: "IBM Plex Sans";
   font-style: normal;
@@ -76,4 +99,13 @@ header {
   border-radius: 45px;
   border: none;
   padding: 8px 32px;
+  border: 1px solid transparent;
+}
+.nav__list .btn1:hover {
+  background: #FFFFFF;
+  border-radius: 45px;
+  color: #1064E5;
+  transition: all 2s ease;
+  transform: rotate(360deg);
+  border: 1px solid #1064E5;
 }/*# sourceMappingURL=main.css.map */
