--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,4 @@
+@import './allblock-file/fonts';
 * {
     margin: 0;
     padding: 0;
@@ -11,6 +12,10 @@
     margin: 0 auto;
     padding: 0 10px;
     width: 100%;
+}
+
+body {
+    font-family: 'IBM Plex Sans';
 }
 
 @import './mixin';
