--- a/scss/allblock-file/_header.scss
+++ b/scss/allblock-file/_header.scss
@@ -70,8 +70,6 @@ header {
     }
 }
 
-@media screen {}
-
 .card {
     &-title {
         padding-top: 113px;
@@ -108,3 +106,82 @@ header {
         }
     }
 }
+
+.input {
+    display: none;
+}
+
+.label {
+    display: none;
+}
+
+@media screen and (max-width:768px) {
+    .container {
+        padding: 0 50px;
+    }
+    header {
+        @include BG (url(../../imges/tabletbagcround.png), no-repeat, 100%, center);
+    }
+    .nav {
+        position: relative;
+        top: 0;
+        @include flexfunksiya (row, start, space-between, wrap);
+        padding: 39px 0;
+        &__list {
+            @include flexfunksiya (column, center, center, wrap);
+            transform: translatey(-120%);
+            transition: all 3s ease;
+            gap: 36px;
+            &--item a {
+                font-family: $fonts;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 14px;
+                line-height: 24px;
+                color: $nav-color;
+            }
+        }
+    }
+    .label {
+        display: block;
+    }
+}
+
+.card {
+    &-title {
+        padding-top: 50px;
+        font-family: $fonts;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 40px;
+        line-height: 46px;
+        color: $nav-color
+    }
+    .leni {
+        font-family: $fonts;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 130%;
+        color: $nav-color;
+        opacity: 0.6;
+        &:hover {
+            font-weight: 500;
+            font-size: 24px;
+            line-height: 130%;
+            color: $nav-color;
+            opacity: 0.9;
+            transition: all 5s ease;
+        }
+        &__text {
+            font-family: $fonts;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 24px;
+            line-height: 130%;
+            color: $nav-color;
+        }
+    }
+}
+
+@media screen and (max-width:576px) {}
