--- a/scss/main.css
+++ b/scss/main.css
@@ -193,6 +193,7 @@ p {
 
 @media screen and (max-width: 768px) {
   header {
+    padding: 0;
     position: absolute;
     top: 0;
     background-image: url(../../imges/tabletbagcround.png);
@@ -201,27 +202,15 @@ p {
     background-position: center;
   }
   .nav {
+    padding: 39px;
     display: flex;
     flex-direction: row;
-    align-items: start;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding: 30px 20px;
-    width: 100%;
-    position: absolute;
-    top: 0;
-  }
-  .nav__list {
-    position: absolute;
-    top: 0;
-    display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-    transform: translatey(-120%);
-    transition: all 2s ease;
-    gap: 36px;
+  }
+  .nav__list {
+    display: none;
   }
   .label {
     display: block;
@@ -229,9 +218,6 @@ p {
   .input:checked ~ .nav .nav__list {
     transform: translatey(0);
   }
-}
-.card {
-  max-width: 670px;
 }
 .card-title {
   padding-top: 50px;
